--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Web Framework
 streamlit>=1.28.0
+GROQ
+groq
 
 # AI/ML Framework
 pyautogen>=0.2.0
@@ -13,3 +15,4 @@ python-dotenv>=1.0.0
 
 # Utilities
 typing-extensions>=4.8.0
+
