--- a/secrets.toml
+++ b/secrets.toml
@@ -1,1 +1,1 @@
-groq_key = os.getenv("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")
+groq_key = "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"
