--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # Web Framework
 streamlit>=1.28.0
 groq
+pip install ag2[openai]
+
 
 # AI/ML Framework
 pyautogen>=0.2.0
@@ -14,5 +16,6 @@ python-dotenv>=1.0.0
 
 # Utilities
 typing-extensions>=4.8.0
+
 
 
