--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Web Framework
 streamlit>=1.28.0
 groq
-pip install ag2[openai]
+ag2[openai]
 
 
 # AI/ML Framework
@@ -16,6 +16,7 @@ python-dotenv>=1.0.0
 
 # Utilities
 typing-extensions>=4.8.0
+
 
 
 
